--- a/Dashboard/style.css
+++ b/Dashboard/style.css
@@ -488,4 +488,17 @@ a {
     .card h4 {
         font-size: 10px;
     }
+
+    #funcoes {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    #grafico {
+        width: 300px;
+    }
+
+    .orcamento-form {
+        width: 300px;
+    }
+
 }
