Dashboard com acompanhamento

--- a/Dashboard/style.css
+++ b/Dashboard/style.css
@@ -219,20 +219,25 @@ a {
 .modal {
     display: none;
     position: fixed;
-    z-index: 1000;
-    left: 0;
     top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    animation: fadeIn 0.3s ease;
 }
 
 .modal-content {
-    background-color: #fff;
-    margin: 15% auto;
+    position: relative;
+    margin: 10% auto;
     padding: 20px;
-    width: 80%;
+    background: white;
+    border-radius: 8px;
+    width: 50%;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 }
+
 
 .close {
     color: #aaa;
@@ -241,6 +246,24 @@ a {
     font-weight: bold;
     cursor: pointer;
 }
+
+
+.modal-content p {
+    margin: 20px 0;
+}
+
+#obras {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    justify-content: center;
+    padding: 20px;
+}
+
+#obras span {
+    font-weight: bold;
+}
+
 
 .legenda {
     display: flex;
@@ -384,6 +407,7 @@ a {
 }
 
 #orcamento,
+#acomp,
 #salvar_orcamento {
     padding: 2px 6px;
     border-radius: 15px;
@@ -393,7 +417,8 @@ a {
     transition: 0.2s all ease;
 }
 
-#orcamento:hover {
+#orcamento:hover,
+#acomp:hover {
     font-weight: 600;
     cursor: pointer;
 }
@@ -526,21 +551,27 @@ a {
     gap: 15px;
 }
 
+.filtro select {
+    padding: 5px;
+    border: none;
+    border-bottom: 1px solid black;
+    margin-right: 15px;
+}
+
 table tbody tr:hover {
     cursor: pointer;
     background-color: #FF5833;
 }
 
-
 table#tabela-obra {
     border-collapse: collapse;
-    width: 90%;
+    width: 80%;
     background-color: white;
 }
 
-table#tabela-obra td:first-child,
-table#tabela-obra th:first-child {
-    max-width: 500px
+table#tabela-obra td:first-child {
+    max-width: 500px;
+    text-align: left;
 }
 
 #tabela-obra td {
@@ -565,6 +596,7 @@ table#tabela-obra th:first-child {
     text-overflow: ellipsis;
     white-space: nowrap;
     width: 135px;
+    text-align: center;
 }
 
 header {
@@ -582,8 +614,136 @@ header h1 {
     left: 15px;
 }
 
-span#obras_ativas, span#obras_finalizadas {
+span#obras_ativas,
+span#obras_finalizadas {
     font-size: 1.2rem;
     font-weight: 600;
     margin-left: 5px;
+}
+
+.funcao {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.form-edicao {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    animation: fadeIn .2s ease-in-out forwards;
+}
+
+#campoNomeImagem {
+    font-weight: 600;
+    font-size: 18px;
+}
+
+.form-edicao .funcao input,
+.funcao select {
+    padding: 5px;
+}
+
+.form-edicao label#imagem_id {
+    display: none;
+}
+
+.form-edicao .buttons {
+    padding: 1rem 0;
+    display: flex;
+    justify-content: center;
+}
+
+form#form-add {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 60%;
+    max-height: 70%;
+    overflow-y: auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    animation: showModal 0.3s ease;
+}
+
+form#form-add .funcao {
+    background-color: rgb(218, 217, 217);
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 15px;
+}
+
+form#form-add button {
+    background-color: #119111;
+    text-align: center;
+    color: #ffffff;
+    padding: 0.5rem 2rem;
+    border-radius: 20px;
+    transition: .3s;
+    text-transform: uppercase;
+    font-size: 14px;
+}
+
+form#form-add button:hover {
+    background-color: #0c6b0c;
+    cursor: pointer;
+}
+
+.titulo-funcoes {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    margin-bottom: 40px;
+}
+
+.titulo {
+    display: flex;
+    justify-content: space-between;
+}
+
+.opcoes {
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.show-in {
+    animation: showIn 0.5s forwards;
+}
+
+#status_funcao {
+    width: 150px;
+}
+
+#status_funcao select {
+    width: 80px;
+    margin: 0 auto;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes showIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
