icone no dashboard e pagamento atualizado

--- a/Dashboard/style.css
+++ b/Dashboard/style.css
@@ -299,7 +299,7 @@ a {
     font-size: 16px;
 }
 
-#painel {
+#painel, #obrasInativas {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
@@ -810,6 +810,7 @@ form#form-add button:hover {
     font-size: 12px;
     color: white;
 }
+
 
 @keyframes fadeIn {
     0% {
