lista de render feita

--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -503,6 +503,7 @@ table tbody tr:hover {
     flex-direction: column;
     gap: 15px
 }
+
 #add-acomp #data-email {
     flex-direction: column;
     gap: 15px
@@ -599,11 +600,17 @@ form#form-add button:hover {
 
 #status_funcao {
     width: 150px;
+    text-align: center;
 }
 
 #status_funcao select {
     width: 80px;
     margin: 0 auto;
+    margin-bottom: 15px;
+}
+
+#status_funcao p {
+    margin-bottom: 6px;
 }
 
 @media (max-width: 1050px) {
@@ -915,8 +922,9 @@ button#generate-pdf {
     color: black;
 }
 
-#ver-acomp-obra, #mostrar-desc {
-    margin: 20px auto; 
+#ver-acomp-obra,
+#mostrar-desc {
+    margin: 20px auto;
     padding: 2px 6px;
     border: 1px solid black;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.423);
