--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -538,7 +538,6 @@ form#form-add .funcao {
     background-color: rgb(218, 217, 217);
     padding: 10px;
     border-radius: 10px;
-    margin-bottom: 15px;
 }
 
 /* form#form-add h1 {
@@ -576,7 +575,21 @@ form#form-add button:hover {
     justify-content: center;
 }
 
+.funcao_comp {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+.check {
+    flex: 0 0 5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .funcao {
+    flex: 0 0 95%;
     display: flex;
     flex-direction: column;
     gap: 8px;
@@ -585,6 +598,24 @@ form#form-add button:hover {
 .titulo {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    /* Alinha verticalmente os itens ao centro */
+}
+
+.titulo p {
+    margin: 0;
+    /* Remove margem do <p> para evitar espaçamento extra */
+}
+
+.right {
+    display: flex;
+    align-items: center;
+    /* Alinha o input e o ícone verticalmente ao centro */
+}
+
+.right input {
+    margin-right: 10px;
+    /* Espaçamento entre o checkbox e o ícone */
 }
 
 .opcoes {
@@ -930,4 +961,9 @@ button#generate-pdf {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.423);
     border-radius: 15px;
     background-color: #1aeb63;
+}
+
+input[type="checkbox"] {
+    accent-color: green;
+    transition: 0.2s all ease;
 }
