--- a/Dashboard/style.css
+++ b/Dashboard/style.css
@@ -8,8 +8,50 @@
 }
 
 body {
-    background-color: #eeeeee;
+    transition: background-color 0.3s, color 0.3s;
+}
 
+/* Tema Light */
+body.light {
+    background-color: #ffffff;
+    color: #000000;
+}
+
+/* Tema Dark */
+body.dark {
+    background-color: #1e1e1e;
+    color: #ffffff;
+}
+
+button#themeToggle {
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    background-color: #f0f0f0;
+    color: #333;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+button#themeToggle:hover {
+    background-color: #ddd;
+}
+
+button#themeToggle i {
+    font-size: 20px;
+}
+
+body.dark button#themeToggle {
+    background-color: #444;
+    color: #fff;
+}
+
+body.dark button#themeToggle:hover {
+    background-color: #555;
 }
 
 main {
@@ -141,7 +183,7 @@ a {
     flex-direction: column;
     padding: 20px;
     gap: 20px;
-    background-color: white;
+    /* background-color: white; */
     grid-column: 2;
 }
 
@@ -258,7 +300,8 @@ a {
 }
 
 
-.close, .close-modal {
+.close,
+.close-modal {
     color: #aaa;
     float: right;
     font-size: 28px;
