--- a/css/styleSidebar.css
+++ b/css/styleSidebar.css
@@ -27,6 +27,20 @@
         overflow-y: auto;
     }
 
+    /* Personalizar a barra de rolagem no WebKit (Chrome, Safari, Edge) */
+    .sidebar.complete::-webkit-scrollbar {
+        width: 8px;
+    }
+
+    .sidebar.complete::-webkit-scrollbar-thumb {
+        background-color: #333;
+        border-radius: 10px;
+    }
+
+    .sidebar.complete::-webkit-scrollbar-track {
+        background-color: #f1f1f1;
+    }
+
     .sidebar.mini {
         width: 60px;
         overflow-y: hidden;
