--- a/css/styleSidebar.css
+++ b/css/styleSidebar.css
@@ -1,155 +1,152 @@
-    /* Estilo básico da sidebar */
-    @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+/* Estilo básico da sidebar */
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
-    body {
-        margin: 0;
-        padding: 0;
-        font-family: 'Nunito', sans-serif;
-        font-size: 12px;
-    }
+body {
+    margin: 0;
+    padding: 0;
+    /* font-family: 'Nunito', sans-serif; */
+}
 
-    .sidebar {
-        height: 100vh;
-        background-color: #333;
-        color: white;
-        position: fixed;
-        top: 0;
-        left: 0;
-        padding-top: 20px;
-        display: flex;
-        flex-direction: column;
-        overflow-y: auto;
-        transition: width 0.3s ease;
-    }
+.sidebar {
+    height: 100vh;
+    background-color: white;
+    color: black;
+    position: fixed;
+    top: 0;
+    left: 0;
+    /* padding-top: 20px; */
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    transition: width 0.3s ease;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+    font-size: 14px;
+}
 
-    .sidebar.complete {
-        width: 200px;
-        overflow-y: auto;
-    }
+.sidebar.complete {
+    width: 200px;
+    overflow-y: auto;
+}
 
-    /* Personalizar a barra de rolagem no WebKit (Chrome, Safari, Edge) */
-    .sidebar.complete::-webkit-scrollbar {
-        width: 8px;
-    }
+/* Personalizar a barra de rolagem no WebKit (Chrome, Safari, Edge) */
+.sidebar.complete::-webkit-scrollbar {
+    width: 5px;
+}
 
-    .sidebar.complete::-webkit-scrollbar-thumb {
-        background-color: #333;
-        border-radius: 10px;
-    }
+.sidebar.complete::-webkit-scrollbar-thumb {
+    background-color: #747474;
+    border-radius: 10px;
+}
 
-    .sidebar.complete::-webkit-scrollbar-track {
-        background-color: #f1f1f1;
-    }
+.sidebar.complete::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+}
 
-    .sidebar.mini {
-        width: 60px;
-        overflow-y: hidden;
-    }
+.sidebar.mini {
+    width: 60px;
+    overflow-y: hidden;
+}
 
-    .sidebar.mini a {
-        text-align: center;
-    }
+.sidebar.mini a {
+    text-align: center;
+}
 
-    .sidebar.mini i.favorite-icon {
-        margin-left: 8px;
-    }
+.sidebar.mini i.favorite-icon {
+    margin-left: 8px;
+}
 
-    .sidebar.mini label {
-        display: none;
-    }
+.sidebar.mini label {
+    display: none;
+}
 
-    .sidebar.mini ul.division {
-        border-top: 1px solid white;
-    }
+.sidebar.mini ul.division {
+    border-top: 1px solid black;
+}
 
-    .sidebar ul {
-        list-style-type: none;
-        padding: 0;
-    }
+.sidebar ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
 
-    .sidebar ul li {
-        padding: 15px;
-        text-align: left;
-    }
+.sidebar ul li {
+    padding: 15px;
+    text-align: left;
+}
 
-    .sidebar ul li a {
-        color: white;
-        text-decoration: none;
-        display: flex;
-        align-items: center;
-        gap: 20px;
-    }
+.sidebar ul li a {
+    color: black;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
 
 
-    .content {
-        margin-left: 100px;
-        padding: 20px;
-    }
+.content {
+    margin-left: 100px;
+    padding: 20px;
+}
 
-    ul.division {
-        position: relative;
-        margin-bottom: 20px;
-    }
+ul.division {
+    position: relative;
+}
 
-    ul.division label {
-        transform: translateX(-50%);
-        background-color: #333;
-        padding: 0 5px;
-        font-size: 13px;
-    }
+ul.division label {
+    transform: translateX(-50%);
+    background-color: white;
+    padding: 0 5px;
+    font-size: 13px;
+}
 
-    button {
-        all: unset;
-    }
+button {
+    all: unset;
+}
 
-    button#menuButton {
-        margin: 0 auto;
-    }
+button#menuButton {
+    margin: 15px auto;
+}
 
-    button#menuButton i {
-        font-size: 18px;
-    }
+button#menuButton i {
+    font-size: 18px;
+}
 
-    button#menuButton:active {
-        transform: scale(0.9);
-    }
+button#menuButton:active {
+    transform: scale(0.9);
+}
 
-    .obra {
-        display: flex;
-        align-items: center;
-        gap: 40px;
-    }
+.obra {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
 
-    #obras-list .obra-item {
-        flex: 1;
-        text-align: left;
-        min-width: 120px;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
+#obras-list .obra-item {
+    flex: 1;
+    text-align: left;
+    min-width: 120px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 
-    #obras-list .favorite-icon {
-        cursor: pointer;
-        color: #888;
-    }
+#obras-list .favorite-icon {
+    cursor: pointer;
+    color: #888;
+}
 
-    .favorite-icon.favorited {
-        color: gold;
-    }
+.favorite-icon.favorited {
+    color: gold;
+}
 
-    .sidebar.mini .division span {
-        display: none;
-    }
+.sidebar.mini .division span {
+    display: none;
+}
 
-    .sidebar.mini .division li a {
-        justify-content: center;
-    }
+.sidebar.mini .division li a {
+    justify-content: center;
+}
 
-    .sidebar.complete .division span {
-        display: inline;
-    }
-
-    .sidebar {
-        transition: all 0.3s ease;
-    }
+.sidebar.complete .division span {
+    display: inline;
+}
