--- a/Dashboard/style.css
+++ b/Dashboard/style.css
@@ -282,9 +282,9 @@ a {
     justify-content: center;
     align-items: center;
     gap: 15px;
-} */
+}
 
-/*
+
 .close,
 .close-modal,
 .close-modal-images,
@@ -393,7 +393,7 @@ a {
     margin: 0 auto;
 }
 
-/* #graficoPorcentagem {
+ #graficoPorcentagem {
     width: 100%;
     height: 100%;
 } */
@@ -465,7 +465,6 @@ a {
 }
 
 #orcamento,
-#acomp,
 #salvar_orcamento,
 #add-acomp {
     padding: 2px 6px;
@@ -1120,39 +1119,38 @@ th .resize-handle {
     background-color: transparent;
 }
 
+.buttons-nav {
+    position: fixed;
+}
 
-/* Estilo Base do Botão */
-#infosBtn {
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    cursor: pointer;
-    transition: transform 0.2s ease, background-color 0.3s ease;
-
+.buttons-nav {
     position: fixed;
     top: 10px;
     right: 10px;
+    display: flex;
+    gap: 10px;
+    z-index: 1000;
 }
 
-#infosBtn:hover {
-    background-color: #45a049;
+.buttons-nav button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    cursor: pointer;
+    transition: transform 0.2s ease, background-color 0.2s ease;
+}
+
+.buttons-nav button:hover {
+    background-color: #0056b3;
+    /* Azul mais escuro no hover */
     transform: scale(1.1);
-    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
+    /* Aumenta levemente o tamanho */
 }
 
-#infosBtn:active {
-    transform: scale(0.95);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-#infosBtn i {
+i.fa-circle-info,
+i.fa-info {
     font-size: 1.5rem;
 }
 
@@ -1202,4 +1200,15 @@ th .resize-handle {
 .acomp-assunto,
 .acomp-data {
     margin: 5px 0;
+}
+
+
+.btnAcompObs {
+    background-color: steelblue;
+    text-align: center;
+    padding: 2px 6px;
+    border-radius: 15px;
+    font-size: 14px;
+    color: white;
+    transition: 0.2s all ease;
 }
