--- a/css/styleSidebar.css
+++ b/css/styleSidebar.css
@@ -19,6 +19,7 @@ body {
     transition: width 0.3s ease;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
     font-size: 12px;
+    z-index: 1000;
 }
 
 .sidebar.complete {
